add link to task title

--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -2,7 +2,7 @@
   <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">
     <div class="flex">
       <p class="mr-2 text-lg">
-        <%= event.title %>              
+        <%= link_to event.title, event_path(event), class: "underline" %>              
       </p>
       <% if event.done == true %>
         <span class="material-symbols-outlined">check_circle</span>
@@ -10,9 +10,7 @@
     </div>
   </td>
 
-            
-
-    <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
+  <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
     <p>
       <%= event.kind || "Event" %>
     </p>
