--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id event %>">
   <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">
     <div class="flex">
-      <p class="mr-2 text-lg">
+      <p class="mr-2">
         <%= link_to event.title, event_path(event), class: "underline" %>              
       </p>
       <% if event.done == true %>
