--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -44,6 +44,8 @@
   </div>
 </div>
 
+
+
 <% if session[:current_view] == "today" %>
   <%= render "view_today", events: @events %>
 <% elsif session[:current_view] == "this_week" %>
@@ -55,3 +57,14 @@
 <% else %>
   <%= render "view_this_week", events: @events %>
 <% end %>
+
+
+<div class="bg-slate-200 p-5 md:w-1/3 mt-12">
+  <%= form_tag import_events_from_csv_path, multipart: true do %>
+    Import Events from CSV:
+    <div>
+      <%= file_field_tag :file %>
+      <%= submit_tag "Importieren", class: "cursor-pointer bg-transparent hover:bg-blue-500 text-blue-500 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded mt-12" %>        
+    </div>
+  <% end %>
+</div>
