--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -64,7 +64,7 @@
     Import Events from CSV:
     <div>
       <%= file_field_tag :file %>
-      <%= submit_tag "Importieren", class: "cursor-pointer bg-transparent hover:bg-blue-500 text-blue-500 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded mt-12" %>        
+      <%= submit_tag "Importieren", class: "cursor-pointer bg-transparent hover:bg-blue-500 text-blue-500 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded mt-12", data: { turbo: false } %>        
     </div>
   <% end %>
 </div>
