--- a/app/views/events/_view_today.html.erb
+++ b/app/views/events/_view_today.html.erb
@@ -12,49 +12,47 @@
         <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Action</th>
       </tr>
     </thead>
-    <tbody class="bg-white dark:bg-slate-800">
-      <tr class=" bg-sky-500/100">
-        <div class="my-2 bg-sky-500/100">
-          <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-black text-xl">
-            <%= Date.today.strftime("%A") %>
-          </td>
-          <td class="border-b border-slate-100 dark:border-slate-700 p-4">
-            <%= Date.today.to_date %> (KW <%= Date.today.strftime('%V') %>)
-          </td>
-          <% 6.times do %>
-            <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">                
-            </td>
-          <% end %>
-        </div>
-      </tr>
+    <tbody class="bg-white dark:bg-slate-800">     
       <% if events.where("start_time > ?", Date.today.beginning_of_day).present? %>
-        <% events.where("start_time > ?", Date.today.beginning_of_day).each_with_index do |event, i| %> 
-          <% if event.start_time >= event.start_time.beginning_of_day && events.where("start_time > ?", Date.today.beginning_of_day)[i-1].end_time < event.start_time.beginning_of_day %>
-            <tr class=" bg-sky-500/100">
-              <div class="my-2 bg-sky-500/100">
-                <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-black text-xl">
-                  <%= event.start_time.strftime("%A") %>
+        <% @sorted_days.each_with_index do |day, index| %>
+          <tr class=" bg-sky-500/100">
+            <div class="my-2 bg-sky-500/100">
+              <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-black text-xl">
+                <%= day.capitalize %>
+              </td>
+              <td class="border-b border-slate-100 dark:border-slate-700 p-4">
+                <%= (Date.today+index).strftime("%Y-%m-%d") %> (KW <%= (Date.today+index).strftime('%V') %>)
+              </td>
+              <% 6.times do %>
+                <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">                
                 </td>
-                <td class="border-b border-slate-100 dark:border-slate-700 p-4">
-                  <%= event.start_time.to_date %> (KW <%= event.start_time.strftime('%V') %>)
-                </td>
-                <% 6.times do %>
-                  <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">                
+              <% end %>
+            </div>
+          </tr>
+          <% if events.where(start_time: (Date.today+index).beginning_of_day..(Date.today+index).end_of_day).present? %>
+            <% events.where(start_time: (Date.today+index).beginning_of_day..(Date.today+index).end_of_day).each_with_index do |event, i| %> 
+              <tr>
+                <div class="my-2">
+                  <%= render event %>
+                  <td class="border-b border-slate-100 dark:border-slate-700 p-4 pr-8 text-slate-500 dark:text-slate-400">
+                    <p>
+                      <%= link_to "Show this event", event %>
+                    </p>
                   </td>
-                <% end %>
+                </div>
+              </tr>
+            <% end %>
+          <% else %>
+            <tr>
+              <div>
+                <td class="px-8 py-4 text-slate-500 dark:text-slate-400">
+                  <p>
+                    Keine Einträge vorhanden
+                  </p>
+                </td>
               </div>
             </tr>
           <% end %>
-          <tr>
-            <div class="my-2">
-              <%= render event %>
-              <td class="border-b border-slate-100 dark:border-slate-700 p-4 pr-8 text-slate-500 dark:text-slate-400">
-                <p>
-                  <%= link_to "Show this event", event %>
-                </p>
-              </td>
-            </div>
-          </tr>
         <% end %>
       <% else %>
         <tr>
