--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -12,7 +12,7 @@
 
   <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
     <p>
-      <%= event.kind || "Event" %>
+      <%= fallback_value(event, :kind) %>
     </p>
   </td>
 
@@ -24,19 +24,19 @@
 
   <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
     <p>
-      <%= event.start_time.strftime("%H:%M") %>
+      <%= format_datetime(event.start_time, false) %>
     </p>
   </td>
 
   <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
     <p>
-      <%= (event.duration/60).to_s + " " + "Minuten" %>
+      <%= format_seconds_to_time(event.duration) %>
     </p>
   </td>
 
   <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
     <p>
-      <%= event.end_time.strftime("%H:%M") %>
+      <%= format_datetime(event.end_time, false) %>
     </p>
   </td>
 
