--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -24,31 +24,31 @@
           
           <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
             <p>
-              <%= @event.kind || "Event" %>
+              <%= fallback_value(@event, :kind) %>
             </p>
           </td>
 
           <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
             <p>
-              <%= @event.description || "-" %>
+              <%= fallback_value(@event, :description) %>
             </p>
           </td>
 
           <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
             <p>
-              <%= @event.start_time %>
+              <%= format_datetime(@event.start_time) %>
             </p>
           </td>
 
           <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
             <p>
-              <%= @event.end_time %>
+              <%= format_datetime(@event.end_time) %>
             </p>
           </td>
 
           <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
             <p>
-              <%= (@event.duration/60).to_s + " " + "Minuten" %>
+              <%= format_seconds_to_time(@event.duration) %>
             </p>
           </td>
 
