--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,7 +2,9 @@
 
 <div class="flex items-center justify-between flex-wrap">
   <div class="flex flex-wrap my-12 items-center">
-    <h1 class="font-bold text-4xl text-blue-500">Kalender</h1>
+      <%= link_to events_path(current_view: "today"), data: { turbo: false } do %>
+        <h1 class="font-bold text-4xl text-blue-500">Kalender</h1>
+      <% end %>  
     <%= link_to new_event_path do %>
       <button class="bg-transparent hover:bg-blue-500 text-blue-500 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded ml-12">
         + Neuer Kalendereintrag
