add link to edit form to the event list

--- a/app/views/events/_view_today.html.erb
+++ b/app/views/events/_view_today.html.erb
@@ -36,7 +36,10 @@
                   <%= render event %>
                   <td class="border-b border-slate-100 dark:border-slate-700 p-4 pr-8 text-slate-500 dark:text-slate-400">
                     <p>
-                      <%= link_to "Show this event", event %>
+                      <%= link_to "Anzeigen", event, class: "underline" %>                      
+                    </p>
+                    <p>
+                      <%= link_to "Editieren", edit_event_path(event), class: "underline" %>
                     </p>
                   </td>
                 </div>
