--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -28,11 +28,11 @@
       <div class="flex">
         <div class="px-3 mb-2">
           <%= form.label :date, "START DATE", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"  %>
-          <%= form.date_field :date, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
+          <%= form.date_field :date, value: event.start_time&.strftime('%Y-%m-%d') || nil, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
         </div>
         <div class="px-3 mb-2">
           <%= form.label :time, "START TIME", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"  %>
-          <%= form.time_field :time, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
+          <%= form.time_field :time, value: event.start_time&.strftime('%H:%M'), class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
         </div>
       </div>
       <div class="px-3 mb-2">
