--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,7 +5,7 @@
       <%= link_to events_path(current_view: "today"), data: { turbo: false } do %>
         <h1 class="font-bold text-4xl text-blue-500">Kalender</h1>
       <% end %>  
-    <%= link_to new_event_path do %>
+    <%= link_to new_event_path(date_from_today_view: (Date.today)) do %>
       <button class="bg-transparent hover:bg-blue-500 text-blue-500 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded ml-12">
         + Neuer Kalendereintrag
       </button>
