--- a/app/views/events/_view_today.html.erb
+++ b/app/views/events/_view_today.html.erb
@@ -23,10 +23,15 @@
               <td class="border-b border-slate-100 dark:border-slate-700 p-4">
                 <%= (Date.today+index).strftime("%Y-%m-%d") %> (KW <%= (Date.today+index).strftime('%V') %>)
               </td>
-              <% 6.times do %>
+              <% 5.times do %>
                 <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">                
                 </td>
               <% end %>
+              <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8">
+                <%= link_to new_event_path(date_from_today_view: (Date.today+index)), data: { turbo: false } do %>
+                  <span class="material-symbols-outlined">add_box</span>
+                <% end %>
+              </td>
             </div>
           </tr>
           <% if events.where(start_time: (Date.today+index).beginning_of_day..(Date.today+index).end_of_day).present? %>
