add create event to month view

--- a/app/views/events/_view_this_month.html.erb
+++ b/app/views/events/_view_this_month.html.erb
@@ -6,8 +6,13 @@
     <div class="grid grid-cols-7 gap-4 font-mono text-white text-sm text-center font-bold leading-6 bg-stripes-fuchsia rounded-lg">
       <% Time.days_in_month(Time.now.month, Time.now.year).times do |i| %>
         <div class="p-4 rounded-lg shadow-lg <%= Date.today.day == i+1 ? 'bg-fuchsia-500' : 'bg-white text-slate-700' %>">
-          <div class="flex">
+          <div class="flex space-x-2">
             <p class="text-lg pb-4"><%= Date.new(Time.now.year, Time.now.month, i+1).strftime("%A %d.%m") %></p>
+            <% if Date.new(Time.now.year, Time.now.month, i+1) >= Date.today %>
+              <%= link_to new_event_path(date_from_today_view: Date.new(Time.now.year, Time.now.month, i+1)), data: { turbo: false } do %>
+                <span class="material-symbols-outlined">add_box</span>
+              <% end %>
+            <% end %>
           </div>
           <% events.where(start_time: Date.new(Time.now.year, Time.now.month, i+1).beginning_of_day..Date.new(Time.now.year, Time.now.month, i+1).end_of_day).each do |event| %>
             <div class="flex">
@@ -37,8 +42,11 @@
       <div class="grid grid-cols-7 gap-4 font-mono text-white text-sm text-center font-bold leading-6 bg-stripes-fuchsia rounded-lg">
         <% Time.days_in_month(Date.new(Date.today.year, number_of_month, 1).month, Time.now.year).times do |i| %>
           <div class="p-4 rounded-lg shadow-lg bg-white text-slate-700">
-            <div class="flex">
+            <div class="flex space-x-2">
               <p class="text-lg pb-4"><%= Date.new(Time.now.year, number_of_month, i+1).strftime("%A %d.%m") %></p>
+              <%= link_to new_event_path(date_from_today_view: Date.new(Time.now.year, number_of_month, i+1)), data: { turbo: false } do %>
+                <span class="material-symbols-outlined">add_box</span>
+              <% end %>
             </div>
             <% events.where(start_time: Date.new(Time.now.year, number_of_month, i+1).beginning_of_day..Date.new(Time.now.year, number_of_month, i+1).end_of_day).each do |event| %>
               <p>
