--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,10 +1,10 @@
-<h1>Editing event</h1>
+<h1 class="mb-4">Eintrag editieren</h1>
 
 <%= render "form", event: @event %>
 
 <br>
 
 <div>
-  <%= link_to "Show this event", @event %> |
-  <%= link_to "Back to events", events_path %>
+  <%= link_to "Eintrag anzeigen", @event %> |
+  <%= link_to "Zurück zum Kalender", events_path %>
 </div>
