--- a/app/views/events/_view_this_year.html.erb
+++ b/app/views/events/_view_this_year.html.erb
@@ -2,7 +2,7 @@
   <div style="background-position:10px 10px" class="absolute inset-0 bg-grid-slate-100 dark:bg-grid-slate-700/25">
   </div>
   <div class="relative rounded-xl overflow-auto p-8">
-    <div class="pb-4 text-xl"><%= Date.today.strftime('%Y') %></div>
+    <div class="pb-4 text-xl">Jahr <%= Date.today.strftime('%Y') %></div>
     <div class="grid grid-cols-3 gap-4 font-mono text-white text-sm text-center font-bold leading-6 bg-stripes-fuchsia rounded-lg">      
       <% 12.times do |index| %>
         <div class="p-4 rounded-lg shadow-lg <%= Date.today.month == index+1 ? 'bg-fuchsia-500' : 'bg-white text-slate-700' %>">
@@ -10,7 +10,7 @@
           <% events.where(start_time: Date.new(Date.today.year, index+1, 1).beginning_of_day..Date.new(Date.today.year, index+1, Date.new(Date.today.year, index+1, 1).end_of_month.day).end_of_day).each do |event| %>
             <div class="flex flex-row">
               <p class="mr-2">
-                <%= event.start_time.strftime('%H:%M') %>:
+                <%= format_datetime(event.start_time) %>:
                 <%= link_to event.title, event_path(event), class: "underline" %>                
               </p>
               <% if event.done == true %>
