--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -53,12 +53,17 @@
 
   <div class="bg-slate-200 p-5 md:w-1/3 mt-12">
     <%= form_tag import_events_from_csv_path, multipart: true do %>
-      Import Events from CSV:
+      <p class="underline text-lg">Import Events from CSV:</p>
       <div>
         <%= file_field_tag :file %>
-        <%= submit_tag "Importieren", class: "cursor-pointer bg-transparent hover:bg-blue-500 text-blue-500 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded mt-12", data: { turbo: false } %>        
+        <%= submit_tag "Importieren", class: "cursor-pointer bg-transparent hover:bg-blue-500 text-blue-500 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded mt-4", data: { turbo: false } %>
       </div>
     <% end %>
+  </div>
+  <div class="bg-slate-200 p-5 md:w-1/3 mt-12">
+    <p class="underline text-lg mb-4">Aufgaben:</p>
+    <p>Erledigt: <%= Event.where(done: true).count%></p>
+    <p>Unerledigt: <%= Event.where(done: true).count%></p>
   </div>
 <% elsif session[:current_view] == "this_week" %>
   <%= render "view_this_week", events: @events %>
