--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -44,6 +44,10 @@
         <%= form.number_field :duration, placeholder: "Standardwert: 15 Minuten", class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
       </div>
       <div class="px-3 mb-2">
+        <%= form.label :frequency, style: "display: block", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
+        <%= form.select :frequency, Event.frequencies.keys.map { |frequency| [frequency.titleize, frequency] }, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
+      </div>
+      <div class="px-3 mb-2">
         <%= form.label :fixed, style: "display: block", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
         <%= form.check_box :fixed, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
       </div>
