--- a/app/views/events/_view_this_week.html.erb
+++ b/app/views/events/_view_this_week.html.erb
@@ -12,10 +12,10 @@
           <% end %>
         <% end %>
         <% events.where(start_time: Date.today.beginning_of_week.beginning_of_day..Date.today.beginning_of_week.end_of_day).each do |event| %>
-          <p>
-            <%= event.start_time.strftime('%H:%M') %>:
-            <%= link_to event.title, event_path(event), class: "underline" %>
-          </p>
+          <div class="flex justify-start text-left">
+            <div class="mr-2"><p class="<%= event.kind == 'blocking' ? 'text-black text-opacity-25' : '' %>"><%= event.start_time.strftime('%H:%M') %>:</p></div>
+            <div><p class="<%= event.kind == 'blocking' ? 'text-black text-opacity-25' : '' %>"><%= link_to event.title, event_path(event), class: "underline mr-2 break-all" %><% if event.done == true %>&#10004;<% end %></p></div>
+          </div>
         <% end %>
       </div>
       <% [:tuesday, :wednesday, :thursday, :friday, :saturday, :sunday].each do |day| %>
@@ -29,14 +29,9 @@
             <% end %>
           </div>
           <% events.where(start_time: Date.today.beginning_of_week.next_occurring(day).beginning_of_day..Date.today.beginning_of_week.next_occurring(day).end_of_day).each do |event| %>
-            <div class="flex">
-              <p class="mr-2">
-                <%= event.start_time.strftime('%H:%M') %>:
-                <%= link_to event.title, event_path(event), class: "underline" %>                
-              </p>
-              <% if event.done == true %>
-                <span class="material-symbols-outlined">check_circle</span>
-              <% end %>
+            <div class="flex justify-start text-left">
+              <div class="mr-2"><p class="<%= event.kind == 'blocking' ? 'text-black text-opacity-25' : '' %>"><%= event.start_time.strftime('%H:%M') %>:</p></div>
+              <div><p class="<%= event.kind == 'blocking' ? 'text-black text-opacity-25' : '' %>"><%= link_to event.title, event_path(event), class: "underline mr-2 break-all" %><% if event.done == true %>&#10004;<% end %></p></div>
             </div>
           <% end %>
         </div>
@@ -62,14 +57,9 @@
             <% end %>
           </div>
           <% events.where(start_time: Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.beginning_of_day..Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.end_of_day).each do |event| %>
-            <div class="flex">
-              <p class="mr-2">
-                <%= event.start_time.strftime('%H:%M') %>:
-                <%= link_to event.title, event_path(event), class: "underline" %>                
-              </p>
-              <% if event.done == true %>
-                <span class="material-symbols-outlined">check_circle</span>
-              <% end %>
+            <div class="flex justify-start text-left">
+              <div class="mr-2"><p class="<%= event.kind == 'blocking' ? 'text-black text-opacity-25' : '' %>"><%= event.start_time.strftime('%H:%M') %>:</p></div>
+              <div><p class="<%= event.kind == 'blocking' ? 'text-black text-opacity-25' : '' %>"><%= link_to event.title, event_path(event), class: "underline mr-2 break-all" %><% if event.done == true %>&#10004;<% end %></p></div>
             </div>
           <% end %>    
         </div>
@@ -82,14 +72,9 @@
               <% end %>
             </div>            
             <% events.where(start_time: Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.next_occurring(day).beginning_of_day..Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.next_occurring(day).end_of_day).each do |event| %>
-              <div class="flex">
-                <p class="mr-2">
-                  <%= event.start_time.strftime('%H:%M') %>:
-                  <%= link_to event.title, event_path(event), class: "underline" %>                
-                </p>
-                <% if event.done == true %>
-                  <span class="material-symbols-outlined">check_circle</span>
-                <% end %>
+              <div class="flex justify-start text-left">
+                <div class="mr-2"><p class="<%= event.kind == 'blocking' ? 'text-black text-opacity-25' : '' %>"><%= event.start_time.strftime('%H:%M') %>:</p></div>
+                <div><p class="<%= event.kind == 'blocking' ? 'text-black text-opacity-25' : '' %>"><%= link_to event.title, event_path(event), class: "underline mr-2 break-all" %><% if event.done == true %>&#10004;<% end %></p></div>
               </div>
             <% end %>
           </div>
