--- a/app/views/events/_view_this_month.html.erb
+++ b/app/views/events/_view_this_month.html.erb
@@ -3,7 +3,7 @@
   </div>
   <div class="relative rounded-xl overflow-auto p-8">
     <div class="pb-4 text-xl"><%= Date.today.strftime("%B") %></div>
-    <div class="grid grid-cols-7 gap-4 font-mono text-white text-sm text-center font-bold leading-6 bg-stripes-fuchsia rounded-lg">
+    <div class="grid grid-cols-7 gap-4 font-mono text-slate-700 text-sm text-center font-bold leading-6 bg-stripes-fuchsia rounded-lg">
       <% Time.days_in_month(Time.now.month, Time.now.year).times do |i| %>
         <div class="p-4 rounded-lg shadow-lg <%= Date.today.day == i+1 ? 'bg-fuchsia-500' : 'bg-white text-slate-700' %>">
           <div class="flex space-x-2">
@@ -15,7 +15,7 @@
             <% end %>
           </div>
           <% events.where(start_time: Date.new(Time.now.year, Time.now.month, i+1).beginning_of_day..Date.new(Time.now.year, Time.now.month, i+1).end_of_day).each do |event| %>
-            <div class="flex justify-start text-left">
+            <div class="flex justify-start text-left <%= event.kind == 'blocking' ? '' : 'p-1 mb-1 rounded-lg bg-sky-300' %>">
               <div class="mr-2"><p class="<%= event.kind == 'blocking' ? 'text-black text-opacity-25' : '' %>"><%= event.start_time.strftime('%H:%M') %>:</p></div>
               <div><p class="<%= event.kind == 'blocking' ? 'text-black text-opacity-25' : '' %>"><%= link_to event.title, event_path(event), class: "underline mr-2 break-all" %><% if event.done == true %>&#10004;<% end %></p></div>
             </div>
@@ -44,7 +44,7 @@
               <% end %>
             </div>
             <% events.where(start_time: Date.new(Time.now.year, number_of_month, i+1).beginning_of_day..Date.new(Time.now.year, number_of_month, i+1).end_of_day).each do |event| %>
-              <div class="flex justify-start text-left">
+              <div class="flex justify-start text-left <%= event.kind == 'blocking' ? '' : 'p-1 mb-1 rounded-lg bg-sky-300' %>">
                 <div class="mr-2"><p class="<%= event.kind == 'blocking' ? 'text-black text-opacity-25' : '' %>"><%= event.start_time.strftime('%H:%M') %>:</p></div>
                 <div><p class="<%= event.kind == 'blocking' ? 'text-black text-opacity-25' : '' %>"><%= link_to event.title, event_path(event), class: "underline mr-2 break-all" %><% if event.done == true %>&#10004;<% end %></p></div>
               </div>
