--- a/app/views/events/_view_this_month.html.erb
+++ b/app/views/events/_view_this_month.html.erb
@@ -5,6 +5,12 @@
     <div class="pb-4 text-xl"><%= Date.today.strftime("%B") %></div>
     <div class="grid grid-cols-7 gap-4 font-mono text-slate-700 text-sm text-center font-bold leading-6 bg-stripes-fuchsia rounded-lg">
       <% Time.days_in_month(Time.now.month, Time.now.year).times do |i| %>
+        <% if i+1 == 1 %>
+          <% (Date.new(Time.now.year, Time.now.month, i+1).wday-1).times do %>
+            <div class="p-4 rounded-lg shadow-lg bg-white text-slate-700">
+            </div>
+          <% end %>
+        <% end %>
         <div class="p-4 rounded-lg shadow-lg <%= Date.today.day == i+1 ? 'bg-fuchsia-500' : 'bg-white text-slate-700' %>">
           <div class="flex space-x-2">
             <p class="text-lg pb-4"><%= Date.new(Time.now.year, Time.now.month, i+1).strftime("%A %d.%m") %></p>
@@ -36,6 +42,12 @@
       <div class="pb-4 text-xl"><%= Date.new(Date.today.year, number_of_month, 1).strftime("%B") %></div>
       <div class="grid grid-cols-7 gap-4 font-mono text-white text-sm text-center font-bold leading-6 bg-stripes-fuchsia rounded-lg">
         <% Time.days_in_month(Date.new(Date.today.year, number_of_month, 1).month, Time.now.year).times do |i| %>
+          <% if i+1 == 1 %>
+            <% (Date.new(Time.now.year, number_of_month, i+1).wday-1).times do %>
+              <div class="p-4 rounded-lg shadow-lg bg-white text-slate-700">
+              </div>
+            <% end %>
+          <% end %>
           <div class="p-4 rounded-lg shadow-lg bg-white text-slate-700">
             <div class="flex space-x-2">
               <p class="text-lg pb-4"><%= Date.new(Time.now.year, number_of_month, i+1).strftime("%A %d.%m") %></p>
