--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -18,7 +18,7 @@
 
   <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
     <p class="text-base text-black  <%= event.kind == 'blocking' ? 'text-opacity-25' : '' %>">
-      <%= fallback_value(event, :description) %>
+      <%= fallback_value(event, :description).truncate(250) %>
     </p>
   </td>
 
